# fuga-memory

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  SECURITY_AUDIT.md  config.toml.example  pyproject.toml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: gemini-guide.md  plan.md
src/fuga_memory/: __init__.py  cli.py  config.py  exceptions.py  server.py  warnings.py
src/fuga_memory/daemon/: __init__.py  _process.py  client.py  server.py
src/fuga_memory/db/: connection.py  repository.py  schema.py
src/fuga_memory/embedding/: encoder.py  loader.py  onnx_cache.py
src/fuga_memory/search/: decay.py  fts.py  fusion.py  vector.py
tests/: conftest.py
tests/integration/: test_daemon_integration.py
tests/unit/: test_cli.py  test_config.py  test_daemon_client.py  test_daemon_process.py  test_daemon_server.py  test_embedding_encoder.py  test_embedding_loader.py  test_exceptions.py  test_onnx_cache.py  test_repository.py  test_schema.py  test_search_decay.py  test_search_fts.py  test_search_fusion.py  test_search_vector.py  test_server.py  test_warnings.py
