[project]
name = "fuga-memory"
version = "0.1.0"
description = "Long-term memory MCP server for Claude Code and other LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0",
    "sqlite-vec>=0.1.7",
    "sentence-transformers>=3.0",
    "optimum[onnxruntime]>=1.20",
    "click>=8.1",
]

[project.scripts]
fuga-memory = "fuga_memory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuga_memory"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "numpy>=1.26",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/fuga_memory --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src/"]

[[tool.mypy.overrides]]
module = ["sqlite_vec"]
ignore_missing_imports = true
